Prepare project for Vercel deployment: Remove Netlify configs, fix build issues

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
     <h1>JobMate</h1>
     <p>Welcome to JobMate! The application is loading...</p>
     <div class="loader"></div>
-    <p>If you continue to see this page, please check the Netlify deployment logs for any errors.</p>
+    <p>If you continue to see this page, please check the Vercel deployment logs for any errors.</p>
   </div>
   <script>
     // Redirect to the Next.js app after a short delay
